# fumito-bot

./: .ghci  .gitignore  README.md  cabal.project.freeze  flake.nix  fourmolu.yaml  fumito-minor.cabal
app/: Main.hs
app/Fumito/: Gateway.hs  Types.hs  Utils.hs
app/Fumito/Bot/: Types.hs
app/Fumito/Client/: Types.hs
app/Fumito/Gateway/: Dispatch.hs  Shard.hs  Types.hs
app/Fumito/HTTP/: Client.hs  Types.hs
app/Fumito/Types/: Channel.hs  Common.hs  Event.hs  Exception.hs  Gateway.hs  Guild.hs  Message.hs  Payload.hs
app/Polysemy/: Req.hs  Websocket.hs
